--- a/css/boxStyle.css
+++ b/css/boxStyle.css
@@ -1,7 +1,6 @@
 
 
 .contrast{
-    font-family: 'Helvetica Neue', Helvetica, sans-serif;
     opacity:.9;
     background-color:#FFF;
     color:#525252;
@@ -30,16 +29,6 @@ textarea {
     resize: none; 
 }
 
-.contrastTitle{
-    font-family: 'Futura Bold', 'Gill Sans', 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
-    opacity: .95;
-    background-color:#FFDE00;
-    color:#000;
-    padding:10px;
-    font-size:30px;
-    font-weight:bold;
-    letter-spacing:6px;
-}
 
 .resizeVideo{
     border: 0px;
@@ -73,6 +62,14 @@ textarea {
     left: 0;
     
     z-index:-2;
+    
+    -webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
+    
 }
 
 
@@ -115,13 +112,23 @@ textarea {
     filter:Alpha(Opacity=70);
 }
 
+.static{
+    opacity:.95;
+    filter:Alpha(Opacity=95);
+}
+
+#controls{
+    position:fixed;
+    width:940px;
+    z-index:9999;
+}
 
 /*FONTS*/
 h1, h2, h3, h4, h5, h6{
     font-family: "CartoGothic Std", "Verdana", "Lucida Grande", "Gill Sans", "Arial", "Helvetica", sans-serif !important;
 }
 
-p{
+p, body{
     font-family: "Inconsolata", Menlo, Courier New, Courier, Mono, monospace !important;
 }
 
