--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
       <dd><input type=text name=username>
       <dt>Password:
       <dd><input type=password name=password>
-      <dd><input type=submit value=Login>
+      <dd><input type=submit value=Login class="btn btn-primary"> <a href="/adduser" class="btn">Create account</a>
     </dl>
   </form>
 {% endblock %}
