--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,19 +1,62 @@
 <!doctype html>
+<html>
+<head>
 <title>Pixl</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-<script type="text/javascript" src="static/jquery-ui/js/jquery-1.7.1.min.js"></script>
-<div class=page>
-  <h1>Pixl</h1>
-  <div class=metanav>
-  {% if not session.logged_in %}
-    <a href="{{ url_for('login') }}">log in</a>
-  {% else %}
-    Logged in as {{ session.username }}
-    <a href="{{ url_for('logout') }}">log out</a>
-  {% endif %}
+<!--<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">-->
+
+<link rel="stylesheet" type="text/css" href="/static/jquery-ui/css/ui-lightness/jquery-ui-1.8.18.custom.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/boxStyle.css" />
+
+<script type="text/javascript" src="/static/jquery-ui/js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="/static/jquery-ui/js/jquery-ui-1.8.18.custom.min.js"></script>
+<script type="text/javascript" src="/static/js/mediator.js"></script>
+<script type="text/javascript" src="/static/js/helpers.js"></script>
+<script type="text/javascript" src="/static/js/box.js"></script>
+<script type="text/javascript" src="/static/js/picbox.js"></script>
+<script type="text/javascript" src="/static/js/markdown/Markdown.Converter.js"></script>
+<script type="text/javascript" src="/static/js/markdown/Markdown.Sanitizer.js"></script>
+
+<!-- fancybox -->
+<script type="text/javascript" src="/static/js/jquery.fancybox/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<script type="text/javascript" src="/static/js/jquery.fancybox/fancybox/jquery.easing-1.3.pack.js"></script>
+<link rel="stylesheet" href="/static/js/jquery.fancybox/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+
+<!-- bootstrap -->
+<script type="text/javascript" src="/static/bootstrap/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.css" />
+</head>
+
+<body>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+        <a class="brand" href="#">
+          Pixl
+        </a>
+        <ul class="nav pull-right">
+            {% if session.logged_in %}
+            <li>
+                <a href="#">logged in as {{ session.username }}</a>
+            </li>
+            <li class="divider-vertical"></li>
+            {% endif %}
+            <li>
+                {% if not session.logged_in %}
+                <a href="{{ url_for('login') }}">log in</a>
+                {% else %}
+                <a href="{{ url_for('logout') }}">log out</a>
+                {% endif %}
+            </li>
+        </ul>
+    </div>
   </div>
-  {% for message in get_flashed_messages() %}
-    <div class=flash>{{ message }}</div>
-  {% endfor %}
-  {% block body %}{% endblock %}
 </div>
+<div class="container" style="margin-top:40px">
+{% for message in get_flashed_messages() %}
+<div class="flash alert"><a class="close" data-dismiss="alert">x</a>{{ message }}</div>
+{% endfor %}
+{% block body %}{% endblock %}
+</div>
+</body>
+
+</html>
